<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_favorite">Add to favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_trailer">Trailer</string>
    <string name="action_website">Website</string>
    <string name="warning_no_internet">No internet connection</string>

    <!--Strings used in SettingsActivity-->
    <!--Sort order-->
    <string name="pref_sort_order_label">Sort order</string>
    <string name="pref_sort_order">sort_order</string>
    <string name="pref_sort_order_asc_label">Ascending</string>
    <string name="pref_sort_order_asc">asc</string>
    <string name="pref_sort_order_desc_label">Descending</string>
    <string name="pref_sort_order_desc">desc</string>

    <!--Order by-->
    <string name="pref_sort_by_label">Sort by</string>
    <string name="pref_sort_by">sort_by</string>
    <string name="pref_sort_by_popularity_label">Popularity</string>
    <string name="pref_sort_by_popularity">popularity</string>
    <string name="pref_sort_by_release_date_label">Release date</string>
    <string name="pref_sort_by_release_date">release_date</string>
    <string name="pref_sort_by_primary_release_date_label">Primary release date</string>
    <string name="pref_sort_by_primary_release_date">primary_release_date</string>
    <string name="pref_sort_by_revenue_label">Revenue</string>
    <string name="pref_sort_by_revenue">revenue</string>
    <string name="pref_sort_by_original_title_label">Original title</string>
    <string name="pref_sort_by_original_title">original_title</string>
    <string name="pref_sort_by_vote_average_label">Vote average</string>
    <string name="pref_sort_by_vote_average">vote_average</string>
    <string name="pref_sort_by_vote_count_label">Vote count</string>
    <string name="pref_sort_by_vote_count">vote_count</string>
    <string name="title_activity_settings">Settings</string>

    <!--Strings used in DetailsActivity-->
    <string name="overview_label">Overview</string>
    <string name="genre_label">Genre</string>
    <string name="runtime_label">Runtime</string>
    <string name="budget_label">Budget</string>
    <string name="revenue_label">Revenue</string>
</resources>
