<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="144dp"
            android:layout_height="218dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/missing_cover" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card"
            tools:text="Title line 1\nTitle line 2" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card"
            tools:text="(1999)" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:text="Tagline 1\nTagline \nTagline 3" />

        <RatingBar
            android:id="@+id/score"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:isIndicator="true"
            android:numStars="5"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/tagline" />

        <TextView
            android:id="@+id/label_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_overview"
            tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground &quot;fight clubs&quot; forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion." />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="109dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/genre_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/label_genre"
            app:layout_constraintTop_toBottomOf="@+id/label_genre"
            tools:text="Drama, Family" />

        <TextView
            android:id="@+id/label_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/runtime_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/genre"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/label_runtime"
            app:layout_constraintTop_toBottomOf="@+id/label_runtime"
            tools:text="1h 29m" />

        <TextView
            android:id="@+id/label_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/budget_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/runtime"
            app:layout_constraintTop_toBottomOf="@+id/runtime" />

        <TextView
            android:id="@+id/budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/label_budget"
            app:layout_constraintTop_toBottomOf="@+id/label_budget"
            tools:text="$45,000,000.00" />

        <TextView
            android:id="@+id/label_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revenue_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/budget"
            app:layout_constraintTop_toBottomOf="@+id/budget" />

        <TextView
            android:id="@+id/revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/label_revenue"
            app:layout_constraintTop_toBottomOf="@+id/label_revenue"
            tools:text="$987,483,777.00" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avLoadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:elevation="2dp"
            app:indicatorColor="@color/colorAccent"
            app:indicatorName="BallGridPulseIndicator" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>